--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Run and Upload Script
 
 on:
   # schedule:
-    # - cron: '40 6 * * *'  # runs daily UTC
+    # - cron: '40 6 * * *'  # runs daily at 11:10 AM IST
   workflow_dispatch:       # allows manual trigger
 
 jobs:
@@ -19,8 +19,7 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      run: |
-        pip install -r requirements.txt || true  # optional
+      run: pip install -r requirements.txt
 
     - name: Run script
       run: python fetch_complete_ter.py
