--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y sshpass
-        sshpass -p "$PASS" scp ter_of_mf_performance.csv $USER@$HOST:/home/gsquare/products/app/amfi/email_templates
+        sshpass -p "$PASS" scp ter_of_mf_performance.xlsx $USER@$HOST:/home/gsquare/products/app/amfi/email_templates
