--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Run and Upload Script
 
 on:
-  # schedule:
-    # - cron: '40 6 * * *'  # runs daily at 11:10 AM IST
+  schedule:
+    - cron: '53 8 * * *'  # runs daily at 11:10 AM IST
   workflow_dispatch:       # allows manual trigger
 
 jobs:
