--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Run and Upload Script
 
 on:
   schedule:
-    - cron: '53 8 * * *'  # runs daily at 11:10 AM IST
-  workflow_dispatch:       # allows manual trigger
+    - cron: '0 9 * * *'  # 2:30 PM IST
+  workflow_dispatch:
 
 jobs:
   run-script:
