--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Run and Upload Script
 
 on:
   schedule:
-    - cron: '0 9 * * *'  # 2:30 PM IST
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
 jobs:
